[gd_scene load_steps=71 format=3 uid="uid://bvx5xobt1mbos"]

[ext_resource type="Script" uid="uid://7y23aqm45dwe" path="res://scripts/root_node.gd" id="1_ynfbw"]
[ext_resource type="PackedScene" uid="uid://snquxgay4etk" path="res://scenes/map_field.tscn" id="2_vhsfa"]
[ext_resource type="Texture2D" uid="uid://subdd5os2xsx" path="res://assets/Menu_cloud/cloud_1.png" id="3_j38m8"]
[ext_resource type="Texture2D" uid="uid://d22g1oyd6etqi" path="res://assets/Menu_cloud/cloud_2.png" id="4_ldoum"]
[ext_resource type="Texture2D" uid="uid://p3nrfx4hte13" path="res://assets/Menu_cloud/cloud_3.png" id="5_jfjke"]
[ext_resource type="Texture2D" uid="uid://bmmpjj3fbvnec" path="res://assets/Menu_cloud/cloud_4.png" id="6_l3gbx"]
[ext_resource type="Texture2D" uid="uid://c1spcv8lrmwny" path="res://assets/Menu_cloud/cloud_x.png" id="7_l3gbx"]
[ext_resource type="PackedScene" uid="uid://cenbtsvh11dp5" path="res://scenes/character/ji_chi.tscn" id="8_d78ui"]
[ext_resource type="PackedScene" uid="uid://p7xg2b3fodxu" path="res://scenes/menu_guide.tscn" id="9_vhsfa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l3gbx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l3gbx"]
atlas = ExtResource("3_j38m8")
region = Rect2(0, 0, 550, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_d78ui"]
atlas = ExtResource("3_j38m8")
region = Rect2(550, 0, 550, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhsfa"]
atlas = ExtResource("3_j38m8")
region = Rect2(1100, 0, 550, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwtxu"]
atlas = ExtResource("3_j38m8")
region = Rect2(1650, 0, 550, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_t75in"]
atlas = ExtResource("3_j38m8")
region = Rect2(2200, 0, 550, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e56t"]
atlas = ExtResource("3_j38m8")
region = Rect2(2750, 0, 550, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_jipf2"]
atlas = ExtResource("3_j38m8")
region = Rect2(3300, 0, 550, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0wh4"]
atlas = ExtResource("3_j38m8")
region = Rect2(3850, 0, 550, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_65evt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3gbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d78ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhsfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwtxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t75in")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e56t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jipf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0wh4")
}],
"loop": true,
"name": &"defalt",
"speed": 1.5
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_b33qr"]
atlas = ExtResource("4_ldoum")
region = Rect2(0, 0, 600, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6oe7"]
atlas = ExtResource("4_ldoum")
region = Rect2(600, 0, 600, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6b1x"]
atlas = ExtResource("4_ldoum")
region = Rect2(1200, 0, 600, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpben"]
atlas = ExtResource("4_ldoum")
region = Rect2(1800, 0, 600, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwi2v"]
atlas = ExtResource("4_ldoum")
region = Rect2(2400, 0, 600, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_ap4d7"]
atlas = ExtResource("4_ldoum")
region = Rect2(3000, 0, 600, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_65w77"]
atlas = ExtResource("4_ldoum")
region = Rect2(3600, 0, 600, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_motqh"]
atlas = ExtResource("4_ldoum")
region = Rect2(4200, 0, 600, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_qvdbn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b33qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6oe7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6b1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpben")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwi2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ap4d7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65w77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_motqh")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qvdbn"]
atlas = ExtResource("5_jfjke")
region = Rect2(0, 0, 620, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_74gyt"]
atlas = ExtResource("5_jfjke")
region = Rect2(620, 0, 620, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_plwfq"]
atlas = ExtResource("5_jfjke")
region = Rect2(1240, 0, 620, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx8i2"]
atlas = ExtResource("5_jfjke")
region = Rect2(1860, 0, 620, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_cblgy"]
atlas = ExtResource("5_jfjke")
region = Rect2(2480, 0, 620, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydpvs"]
atlas = ExtResource("5_jfjke")
region = Rect2(3100, 0, 620, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0q1k"]
atlas = ExtResource("5_jfjke")
region = Rect2(3720, 0, 620, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfi8t"]
atlas = ExtResource("5_jfjke")
region = Rect2(4340, 0, 620, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_fekcl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvdbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74gyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plwfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx8i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cblgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydpvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0q1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfi8t")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d78ui"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nb1gb"]
atlas = ExtResource("7_l3gbx")
region = Rect2(0, 0, 150, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c46o2"]
atlas = ExtResource("7_l3gbx")
region = Rect2(150, 0, 150, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dhvn"]
atlas = ExtResource("7_l3gbx")
region = Rect2(300, 0, 150, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_184fy"]
atlas = ExtResource("7_l3gbx")
region = Rect2(450, 0, 150, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_yd5j6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb1gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c46o2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dhvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_184fy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fekcl"]
atlas = ExtResource("6_l3gbx")
region = Rect2(0, 0, 320, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7a4y"]
atlas = ExtResource("6_l3gbx")
region = Rect2(320, 0, 320, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_brfk8"]
atlas = ExtResource("6_l3gbx")
region = Rect2(640, 0, 320, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjr4y"]
atlas = ExtResource("6_l3gbx")
region = Rect2(960, 0, 320, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt2b5"]
atlas = ExtResource("6_l3gbx")
region = Rect2(1280, 0, 320, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrl4d"]
atlas = ExtResource("6_l3gbx")
region = Rect2(1600, 0, 320, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_slt5f"]
atlas = ExtResource("6_l3gbx")
region = Rect2(1920, 0, 320, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4po7"]
atlas = ExtResource("6_l3gbx")
region = Rect2(2240, 0, 320, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_6e56t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fekcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7a4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brfk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjr4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt2b5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrl4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slt5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4po7")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_2gqe3"]
atlas = ExtResource("5_jfjke")
region = Rect2(0, 0, 620, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijaif"]
atlas = ExtResource("5_jfjke")
region = Rect2(620, 0, 620, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ldkq"]
atlas = ExtResource("5_jfjke")
region = Rect2(1240, 0, 620, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0lh2"]
atlas = ExtResource("5_jfjke")
region = Rect2(1860, 0, 620, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmwmb"]
atlas = ExtResource("5_jfjke")
region = Rect2(2480, 0, 620, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_0p4ep"]
atlas = ExtResource("5_jfjke")
region = Rect2(3100, 0, 620, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d2nn"]
atlas = ExtResource("5_jfjke")
region = Rect2(3720, 0, 620, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_immi7"]
atlas = ExtResource("5_jfjke")
region = Rect2(4340, 0, 620, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_jipf2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gqe3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijaif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ldkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0lh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmwmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0p4ep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d2nn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_immi7")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_t4yja"]
atlas = ExtResource("4_ldoum")
region = Rect2(0, 0, 600, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_stsei"]
atlas = ExtResource("4_ldoum")
region = Rect2(600, 0, 600, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4tdy"]
atlas = ExtResource("4_ldoum")
region = Rect2(1200, 0, 600, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ime7"]
atlas = ExtResource("4_ldoum")
region = Rect2(1800, 0, 600, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_abq44"]
atlas = ExtResource("4_ldoum")
region = Rect2(2400, 0, 600, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_cncxv"]
atlas = ExtResource("4_ldoum")
region = Rect2(3000, 0, 600, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl73q"]
atlas = ExtResource("4_ldoum")
region = Rect2(3600, 0, 600, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia7qy"]
atlas = ExtResource("4_ldoum")
region = Rect2(4200, 0, 600, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_m0wh4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4yja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stsei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4tdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ime7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abq44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cncxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl73q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia7qy")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="RootNode" type="Node2D"]
script = ExtResource("1_ynfbw")

[node name="map_field" parent="." instance=ExtResource("2_vhsfa")]

[node name="menu_left" type="PanelContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(960, 250)
offset_right = 1302.0
offset_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_l3gbx")
metadata/_edit_use_anchors_ = true

[node name="1" type="AnimatedSprite2D" parent="menu_left"]
position = Vector2(104, 166)
scale = Vector2(0.339947, 0.339947)
sprite_frames = SubResource("SpriteFrames_65evt")
animation = &"defalt"
autoplay = "defalt"
frame = 5
frame_progress = 0.857075

[node name="2" type="AnimatedSprite2D" parent="menu_left"]
position = Vector2(601, 87.00001)
scale = Vector2(0.491195, 0.491195)
sprite_frames = SubResource("SpriteFrames_qvdbn")
autoplay = "default"
frame_progress = 0.490758

[node name="3" type="AnimatedSprite2D" parent="menu_left"]
position = Vector2(1124, 162.00002)
scale = Vector2(0.385157, 0.385156)
sprite_frames = SubResource("SpriteFrames_fekcl")
autoplay = "default"
frame_progress = 0.28904

[node name="menu_right" type="PanelContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(1300, 250)
offset_right = 1395.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_d78ui")
metadata/_edit_use_anchors_ = true

[node name="x" type="AnimatedSprite2D" parent="menu_right"]
position = Vector2(1250, 63)
scale = Vector2(0.7716669, 0.96000004)
sprite_frames = SubResource("SpriteFrames_yd5j6")
autoplay = "default"
frame_progress = 0.709443

[node name="Button" type="Button" parent="menu_right/x"]
offset_left = -58.0
offset_top = -41.0
offset_right = 57.0
offset_bottom = 50.0
focus_mode = 0
flat = true
metadata/_edit_use_anchors_ = true

[node name="4" type="AnimatedSprite2D" parent="menu_right"]
position = Vector2(607.00006, 84)
scale = Vector2(0.604492, 0.604492)
sprite_frames = SubResource("SpriteFrames_6e56t")
autoplay = "default"
frame_progress = 0.113348

[node name="5" type="AnimatedSprite2D" parent="menu_right"]
position = Vector2(205, 197.00002)
scale = Vector2(0.393765, 0.351562)
sprite_frames = SubResource("SpriteFrames_jipf2")
autoplay = "default"
frame_progress = 0.176488

[node name="6" type="AnimatedSprite2D" parent="menu_right"]
position = Vector2(921, 186)
scale = Vector2(0.326902, 0.32695)
sprite_frames = SubResource("SpriteFrames_m0wh4")
autoplay = "default"
frame_progress = 0.78963

[node name="JiChi" parent="." instance=ExtResource("8_d78ui")]
position = Vector2(1571, 305)

[node name="menu_guide" parent="." instance=ExtResource("9_vhsfa")]
position = Vector2(3170, 138)
scale = Vector2(0.25, 0.25)

[connection signal="pressed" from="menu_right/x/Button" to="." method="_show_menu"]
[connection signal="menu_button_pressed" from="menu_guide" to="." method="_show_menu"]
